
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buff ;


 char* module ;
 int send (int,char*,int,int ) ;
 int snprintf (char*,int,char*,char*) ;
 int strlen (char*) ;

void login(int s) {
char buff[80];


snprintf(buff,sizeof(buff),"%s\n",module);
send(s,buff,strlen(buff),0);


        send(s,"--server\n",9,0);
        send(s,"--sender\n",9,0);
        send(s,"\n",1,0);

}
