; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21242.c_login.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21242.c_login.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@module = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [10 x i8] c"--server\0A\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"--sender\0A\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @login(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [80 x i8], align 16
  store i32 %0, i32* %2, align 4
  %4 = getelementptr inbounds [80 x i8], [80 x i8]* %3, i64 0, i64 0
  %5 = load i8*, i8** @module, align 8
  %6 = call i32 @snprintf(i8* %4, i32 80, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %5)
  %7 = load i32, i32* %2, align 4
  %8 = getelementptr inbounds [80 x i8], [80 x i8]* %3, i64 0, i64 0
  %9 = getelementptr inbounds [80 x i8], [80 x i8]* %3, i64 0, i64 0
  %10 = call i32 @strlen(i8* %9)
  %11 = call i32 @send(i32 %7, i8* %8, i32 %10, i32 0)
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @send(i32 %12, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 9, i32 0)
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @send(i32 %14, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i32 9, i32 0)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @send(i32 %16, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 1, i32 0)
  ret void
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
